--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,16 @@ div {
   }
   .scrollbar-hide {
     -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
+@layer utilities {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none;
   }
 }
 
